--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+data/trees/cog_global_2022-01-25_tree.newick filter=lfs diff=lfs merge=lfs -text
