--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 *.DS_Store
+data/lineages/metadata_cog_england_2022-03-25_with_sublineages.csv
+*.ipynb_checkpoints
+*/__pycache__/*
+*.err
+*.out
+*.sh
+*__MACOSX/
